# annotation-scheme

./: .gitignore  AUTHORS  Dockerfile  Makefile  Makefile.am  README  README.md  annotation.scm  annotation_definition.yml  bootstrap  configure.ac  env  env.in  guile.am  guix.scm  opencog_deps
.circleci/: config.yml
.github/workflows/: ci_action.yml
annotation/: biogrid-helpers.scm  biogrid.scm  functions.scm  gene-go.scm  gene-pathway.scm  gene-record.scm  go-helpers.scm  go.scm  graph.scm  instrumentation.scm  main.scm  parser.scm  pathway-helpers.scm  pln_rule.scm  report.scm  rna.scm  string-helpers.scm  string.scm  util.scm  writer.scm
functions/: annotation_request_handler.scm  biogrid_interaction_annotation.scm  gene_go_annotation.scm  gene_pathway_annotation.scm  parser.scm  pm_functions.scm  sample_dataset.scm  sample_demo.scm
helpers/: atomese-parser.scm  parser_utils.scm  pm_functions.scm  utils.scm
m4/: guile.m4
parser/: parser.scm  utils.scm
result/: BIogrid_withPubmedID.scm  sample_result.scm
sample/: sample_result.scm
scheme2csv/: Example-1.scm  Example-3.scm  README.md  scm2csv.py
tests/: go-tests.scm  go_plus_chebi_sample.scm  go_plus_sample.scm  main-tests.scm  parser-tests.scm  pathway-tests.scm  sample_dataset.scm  sample_demo.scm  sample_parse_data.scm  string-tests.scm  string_ggi_sample.scm  string_ppi_sample.scm  util-tests.scm
